feat: add user page and start menu

--- a/src/assets/settings/_color.scss
+++ b/src/assets/settings/_color.scss
@@ -1,2 +1,12 @@
-$primary: #49240F;
-$secondary: #E4A79D;
+$background: #0B0D21;
+$text-white: #E2E4E9;
+
+$pink-1: #EC008C;
+$pink-2: #FC6767;
+$pink-gradient: linear-gradient(90deg, #EC008C 0%, #FC6767 100%);
+
+$cyan-1: #02AAB0;
+$cyan-2: #00CDAC;
+$cyan-gradient: linear-gradient(64.29deg, #02AAB0 26.05%, #00CDAC 100%);
+$blue: #232966;
+$blue-dark: #161a41;
