--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -3,6 +3,26 @@
 
 // UTILS
 
+.h1 {
+    font-size: 2rem;
+}
+
+a.h1 {
+    display: flex;
+    align-items: center;
+    background-image: none;
+    transition: 0.3s;
+    &:hover {
+        color: $pink-1 !important;
+        background-image: linear-gradient(90deg, #EC008C 0%, #FC6767 100%);
+        transition: 0.3s;
+    }
+}
+
+.white {
+    color: $text-white !important
+}
+
 .d-flex {
     display: flex;
 }
@@ -17,6 +37,10 @@
 
 .justify-content-center {
     justify-content: center;
+}
+
+.justify-content-between {
+    justify-content: space-between;
 }
 
 .justify-content-start {
