feat: add top contributor and start ping server

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -19,6 +19,11 @@ a.h1 {
     }
 }
 
+a.top-players-username {
+  color: white !important;
+  background-image: none;
+}
+
 .white {
     color: $text-white !important
 }
