feat: create feedback info page and action to accept and refuse

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -1,20 +1,35 @@
 button {
-    position: relative;
-    height: 56px;
-    border: 0px !important;
+  cursor: pointer;
+  position: relative;
+  height: 56px;
+  border: 0 !important;
 
-    background: linear-gradient(162.34deg, #161A42 22.61%, #0B0D21 118.29%);
-    border-radius: 16px !important;
+  background: linear-gradient(162.34deg, #161A42 22.61%, #0B0D21 118.29%);
+  border-radius: 16px !important;
+  color: $text-white !important;
 
-    span.p-button-label {
-        color: $text-white !important;
-    }
-
-    .p-button-text {
-        background: transparent !important;
-    }
+  .p-button-text {
+      background: transparent !important;
+  }
 
   &.p-toast .p-toast-message.p-toast-message-success .p-toast-message-icon, .p-toast .p-toast-message.p-toast-message-success .p-toast-icon-close {
     background-color: transparent !important;
+  }
+  &.small-btn {
+    height: 35px;
+    border-radius: 8px !important;
+  }
+
+  &[severity='success'] {
+    background: $success !important;
+    color: $text-white !important;
+  }
+  &[severity='danger'] {
+    background: $danger !important;
+    color: $text-white !important;
+  }
+
+  + button {
+    margin-left: 1rem;
   }
 }
