--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -67,3 +67,11 @@ a.top-players-username {
 .row {
     flex-direction: row;
 }
+
+.mr-1 {
+  margin-right: 1rem;
+}
+
+.mt-1 {
+    margin-top: 1rem;
+}
