--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -3,7 +3,7 @@ button {
   position: relative;
   height: 56px;
   border: 0 !important;
-
+  padding: 0 1.2rem;
   background: linear-gradient(162.34deg, #161A42 22.61%, #0B0D21 118.29%);
   border-radius: 16px !important;
   color: $text-white !important;
