--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -4,7 +4,7 @@
 // UTILS
 
 .h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 a {
@@ -12,15 +12,16 @@ a {
 }
 
 a.h1 {
-    display: flex;
-    align-items: center;
-    background-image: none;
+  display: flex;
+  align-items: center;
+  background-image: none;
+  transition: 0.3s;
+
+  &:hover {
+    color: $pink-1 !important;
+    background-image: linear-gradient(90deg, #EC008C 0%, #FC6767 100%);
     transition: 0.3s;
-    &:hover {
-        color: $pink-1 !important;
-        background-image: linear-gradient(90deg, #EC008C 0%, #FC6767 100%);
-        transition: 0.3s;
-    }
+  }
 }
 
 a.top-players-username {
@@ -29,43 +30,43 @@ a.top-players-username {
 }
 
 .white {
-    color: $text-white !important
+  color: $text-white !important
 }
 
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .ml-1 {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .justify-content-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .justify-content-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .justify-content-start {
-    justify-content: start;
+  justify-content: start;
 }
 
 .align-items-start {
-    align-items: start;
+  align-items: start;
 }
 
 .align-items-center {
-    align-items: center;
+  align-items: center;
 }
 
 .row {
-    flex-direction: row;
+  flex-direction: row;
 }
 
 .mr-1 {
@@ -73,23 +74,27 @@ a.top-players-username {
 }
 
 .mt-1 {
-    margin-top: 1rem;
+  margin-top: 1rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
 }
 
 .d-none {
-    display: none;
+  display: none;
 }
 
 .d-block {
-    display: block;
+  display: block;
 }
 
 .d-inline-block {
-    display: inline-block;
+  display: inline-block;
 }
 
 .d-inline {
-    display: inline;
+  display: inline;
 }
 
 .d-flex {
