hotfix: logout user when request faild and style pagination

--- a/assets/scss/settings/_color.scss
+++ b/assets/scss/settings/_color.scss
@@ -14,7 +14,7 @@ $blue-dark: #161a41;
 
 $primary-sc: #f8d270;
 $primary-sc-hover: #d6b256;
-$secondary: #6B7280;
+$secondary: #545454;
 $text: #243134;
 
 /*
