--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -101,6 +101,41 @@ a.top-players-username {
   display: flex;
 }
 
+.feedbacks-card-section > li {
+  list-style: none;
+}
+
+ul.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  li {
+    list-style: none;
+    margin: 0 0.5rem;
+    cursor: pointer;
+    &.disabled {
+      cursor: not-allowed;
+      text-decoration: none;
+      a {
+        color: $gray-500 !important;
+        background: none !important;
+      }
+    }
+    a {
+      background: none !important;
+    }
+    &.active {
+      a {
+        cursor: default;
+        color: $pink-2 !important;
+        font-weight: 900 !important;
+        background: none !important;
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 768px) {
   .d-md-none {
     display: none;
