--- a/assets/scss/settings/_color.scss
+++ b/assets/scss/settings/_color.scss
@@ -1,22 +1,3 @@
-$background: #0B0D21;
-$text-white: #FAFAFB;
-$text: #495057;
-
-$pink-1: #EC008C;
-$pink-2: #FC6767;
-$pink-gradient: linear-gradient(90deg, #EC008C 0%, #FC6767 100%);
-
-$cyan-1: #02AAB0;
-$cyan-2: #00CDAC;
-$cyan-gradient: linear-gradient(64.29deg, #02AAB0 26.05%, #00CDAC 100%);
-$blue: #232966;
-$blue-dark: #161a41;
-
-$primary-sc: #f8d270;
-$primary-sc-hover: #d6b256;
-$secondary: #545454;
-$text: #243134;
-
 /*
    ##################
    ###### Gray ######
@@ -155,3 +136,25 @@ $pink-900 : #831843;
 
 $success: $green-500;
 $danger: $red-500;
+
+
+$background: #0B0D21;
+$text-white: #FAFAFB;
+$text: #495057;
+
+$pink-1: #EC008C;
+$pink-2: #FC6767;
+$pink-3: $red-600;
+$pink-gradient: linear-gradient(90deg, #EC008C 0%, #FC6767 100%);
+
+$cyan-1: #02AAB0;
+$cyan-2: #00CDAC;
+$cyan-gradient: linear-gradient(64.29deg, #02AAB0 26.05%, #00CDAC 100%);
+$blue: #232966;
+$blue-light: #304973;
+$blue-dark: #161a41;
+
+$primary-sc: #f8d270;
+$primary-sc-hover: #d6b256;
+$secondary: #545454;
+$text: #243134;
