fix: style & check if resource form is valid

--- a/assets/scss/settings/_color.scss
+++ b/assets/scss/settings/_color.scss
@@ -151,7 +151,7 @@ $cyan-1: #02AAB0;
 $cyan-2: #00CDAC;
 $cyan-gradient: linear-gradient(64.29deg, #02AAB0 26.05%, #00CDAC 100%);
 $blue: #232966;
-$blue-light: #304973;
+$blue-light: #242e67;
 $blue-dark: #161a41;
 
 $primary-sc: #f8d270;
