--- a/assets/scss/components/_input.scss
+++ b/assets/scss/components/_input.scss
@@ -62,6 +62,7 @@ textarea,
     background-color: $blue-dark;
     border: none;
     padding: 0.75rem 1rem;
+    margin-top: 1rem;
 }
 
 .p-dropdown-panel .p-dropdown-header,
@@ -71,11 +72,13 @@ textarea,
     padding: 0.75rem 1rem;
 }
 
-.p-dropdown-panel .p-dropdown-items .p-dropdown-item {
-    color: $text-white;
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item,
+.p-dropdown-empty-message {
+    color: $text-white !important;
 }
 
-.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover,
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled).p-focus {
     background-color: $blue-dark;
     color: $text-white;
 }
